# stm32_flash_data_model

./: CMakeLists.txt  Makefile  README.md  data_model_def.json  download.jlink  make_data_model.py
app/inc/: comm.h  date_time.h  logging.h  utils.h
app/src/: comm.c  date_time.c  logging.c  main.c  utils.c
data_model/: data_model_generated.h  data_struct.c  data_struct.h
lib/stm/: stm32f10x.h  stm32f1xx.h
